tests/syntax_error/typedef_bad_name.jou
typedef 1 = lol  # Error: expected the name for a type, got an integer
